[package]
name = "cursor_ui_guard"
version = "1.0.0"
edition = "2024"

[dependencies]
sysinfo = "0.35.2"
nix = { version = "0.30.1", features = ["process", "signal"] }
env_logger = "0.11.8"
log = "0.4.27"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "serde"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3 # 使性能好
